tests/miniJava/pos/001037_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( this ) java [ 0 ] = 0 ; else if ( 0 ) { } else { } } }
