tests/miniJava/neg/002916_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = String java ; } }
